--- a/app/src/main/res/layout/fragment_gio_hang.xml
+++ b/app/src/main/res/layout/fragment_gio_hang.xml
@@ -7,6 +7,29 @@
     android:orientation="vertical"
     tools:context=".Fragment.GioHangFragment">
 
+    <ImageView
+        android:id="@+id/im_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="220dp"
+        android:src="@drawable/empty_bag"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/tv_trong"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Giỏ hàng trống"
+        android:textSize="32sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/im_empty" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcGioHang"
         android:layout_width="match_parent"
