--- a/app/src/main/res/layout/fragment_tai_khoan.xml
+++ b/app/src/main/res/layout/fragment_tai_khoan.xml
@@ -12,7 +12,7 @@
         android:layout_height="111dp"
         android:layout_marginTop="56dp"
         android:elevation="10dp"
-        android:src="@drawable/edittext"
+        android:src="@drawable/baseline_account_box_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
