--- a/app/src/main/res/layout/activity_them_sach.xml
+++ b/app/src/main/res/layout/activity_them_sach.xml
@@ -110,10 +110,11 @@
         android:id="@+id/imThemSach"
         android:layout_width="358dp"
         android:layout_height="175dp"
-        android:layout_marginTop="24dp"
-        android:src="@drawable/hinh2"
+        android:layout_marginTop="32dp"
         android:clickable="true"
+        android:src="@drawable/add"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edGiaSachThemSach" />
 
