--- a/app/src/main/res/layout/activity_trang_chu_admin.xml
+++ b/app/src/main/res/layout/activity_trang_chu_admin.xml
@@ -52,12 +52,28 @@
         android:id="@+id/tvThemSach"
         android:layout_width="375dp"
         android:layout_height="51dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/edittext"
         android:elevation="10dp"
         android:paddingLeft="40dp"
         android:paddingTop="12dp"
         android:text="Thêm Sách"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvSach" />
+
+    <TextView
+        android:id="@+id/tvSach"
+        android:layout_width="375dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/edittext"
+        android:elevation="10dp"
+        android:paddingLeft="40dp"
+        android:paddingTop="12dp"
+        android:text="Sách"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
