--- a/app/src/main/res/layout/activity_sua_thong_tin.xml
+++ b/app/src/main/res/layout/activity_sua_thong_tin.xml
@@ -15,14 +15,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/tvTroVeSua"
+        <ImageView
+            android:id="@+id/tvBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:clickable="true"
-            android:text="Trở về"
+            android:src="@drawable/baseline_arrow_back_ios_24"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -32,11 +32,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
             android:text="Chỉnh sửa thông tin"
+            android:textColor="@color/white"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:textColor="@color/white"
+            app:flow_horizontalAlign="center"
+            app:flow_verticalAlign="center"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/top"
             app:layout_constraintStart_toStartOf="@id/top"
             app:layout_constraintTop_toTopOf="@id/top" />
