--- a/app/src/main/res/layout/activity_them_sach.xml
+++ b/app/src/main/res/layout/activity_them_sach.xml
@@ -51,11 +51,12 @@
 
     <EditText
         android:id="@+id/edTenSachThem"
-        android:layout_width="358dp"
+        android:layout_width="match_parent"
         android:layout_height="51dp"
         android:layout_marginTop="120dp"
         android:background="@drawable/edittext"
         android:elevation="5dp"
+        android:layout_marginHorizontal="16dp"
         android:hint="Tên Sách"
         android:paddingLeft="16dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,11 +66,12 @@
 
     <EditText
         android:id="@+id/edSoLuongThem"
-        android:layout_width="358dp"
+        android:layout_width="match_parent"
         android:layout_height="51dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/edittext"
         android:elevation="5dp"
+        android:layout_marginHorizontal="16dp"
         android:inputType="number"
         android:hint="Số lượng"
         android:paddingLeft="16dp"
@@ -80,11 +82,12 @@
 
     <Spinner
         android:id="@+id/spTheLoai"
-        android:layout_width="358dp"
+        android:layout_width="match_parent"
         android:layout_height="51dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/edittext"
         android:elevation="5dp"
+        android:layout_marginHorizontal="16dp"
         android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
@@ -93,11 +96,12 @@
 
     <EditText
         android:id="@+id/edGiaSachThemSach"
-        android:layout_width="358dp"
+        android:layout_width="match_parent"
         android:layout_height="51dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/edittext"
         android:elevation="5dp"
+        android:layout_marginHorizontal="16dp"
         android:hint="Giá sách"
         android:inputType="number"
         android:paddingLeft="16dp"
@@ -120,10 +124,11 @@
 
     <Button
         android:id="@+id/btnAdd"
-        android:layout_width="358dp"
+        android:layout_width="match_parent"
         android:layout_height="51dp"
         android:layout_marginTop="16dp"
         android:text="Thêm Sách"
+        android:layout_marginHorizontal="16dp"
         android:textSize="16sp"
         android:backgroundTint="#5DB075"
         app:layout_constraintEnd_toEndOf="parent"
