--- a/app/src/main/res/layout/activity_trang_chu_admin.xml
+++ b/app/src/main/res/layout/activity_trang_chu_admin.xml
@@ -50,7 +50,7 @@
 
     <TextView
         android:id="@+id/tvThemSach"
-        android:layout_width="375dp"
+        android:layout_width="match_parent"
         android:layout_height="51dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/edittext"
@@ -58,6 +58,7 @@
         android:paddingLeft="40dp"
         android:paddingTop="12dp"
         android:text="Thêm Sách"
+        android:layout_marginHorizontal="8dp"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,13 +67,14 @@
 
     <TextView
         android:id="@+id/tvSach"
-        android:layout_width="375dp"
+        android:layout_width="match_parent"
         android:layout_height="51dp"
-        android:layout_marginTop="32dp"
         android:background="@drawable/edittext"
         android:elevation="10dp"
         android:paddingLeft="40dp"
         android:paddingTop="12dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="8dp"
         android:text="Sách"
         android:textSize="16sp"
         android:textStyle="bold"
