--- a/app/src/main/res/layout/fragment_tai_khoan.xml
+++ b/app/src/main/res/layout/fragment_tai_khoan.xml
@@ -54,11 +54,12 @@
 
     <TextView
         android:id="@+id/tvDonMuaHang"
-        android:layout_width="375dp"
+        android:layout_width="match_parent"
         android:layout_height="51dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginVertical="8dp"
         android:background="@drawable/edittext"
         android:elevation="10dp"
         android:paddingLeft="40dp"
@@ -72,11 +73,12 @@
 
     <TextView
             android:id="@+id/tvChinhSuaThongTin"
-            android:layout_width="375dp"
+            android:layout_width="match_parent"
             android:layout_height="51dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginVertical="8dp"
             android:background="@drawable/edittext"
             android:elevation="10dp"
             android:paddingLeft="40dp"
@@ -92,11 +94,12 @@
 
         <TextView
             android:id="@+id/tvLichSuMuaSach"
-            android:layout_width="375dp"
+            android:layout_width="match_parent"
             android:layout_height="51dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginVertical="8dp"
             android:background="@drawable/edittext"
             android:elevation="10dp"
             android:paddingLeft="40dp"
@@ -111,11 +114,12 @@
 
         <TextView
             android:id="@+id/tvCaiDat"
-            android:layout_width="375dp"
+            android:layout_width="match_parent"
             android:layout_height="51dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginVertical="8dp"
             android:background="@drawable/edittext"
             android:elevation="10dp"
             android:paddingLeft="40dp"
@@ -130,11 +134,12 @@
 
         <TextView
             android:id="@+id/tvLienHe"
-            android:layout_width="375dp"
+            android:layout_width="match_parent"
             android:layout_height="51dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginVertical="8dp"
             android:background="@drawable/edittext"
             android:elevation="10dp"
             android:paddingLeft="40dp"
@@ -147,24 +152,25 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvCaiDat" />
 
-        <TextView
-            android:id="@+id/tvDangXuat"
-            android:layout_width="375dp"
-            android:layout_height="51dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/edittext"
-            android:elevation="10dp"
-            android:paddingLeft="40dp"
-            android:paddingTop="12dp"
-            android:text="Đăng xuat"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:clickable="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.428"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvLienHe" />
+    <TextView
+        android:id="@+id/tvDangXuat"
+        android:layout_width="match_parent"
+        android:layout_height="51dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginVertical="8dp"
+        android:background="@drawable/edittext"
+        android:clickable="true"
+        android:elevation="10dp"
+        android:paddingLeft="40dp"
+        android:paddingTop="12dp"
+        android:text="Đăng xuat"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvLienHe" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
