--- a/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/app/src/main/res/layout/fragment_trang_chu.xml
@@ -22,6 +22,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginLeft="315dp"
+                    android:clickable="true"
                     android:src="@drawable/icon_search" />
 
                 <ImageView
@@ -85,22 +86,6 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="2dp"
                     app:ci_drawable="@drawable/bg_indicator" />
-
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:text="Bán chạy"
-                    android:textColor="@color/black"
-                    android:textSize="22dp"
-                    android:textStyle="bold" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recy_BanChay"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
@@ -114,22 +99,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvSachMoi"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="800dp" />
 
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:text="Phổ biến"
-                    android:textColor="@color/black"
-                    android:textSize="22dp"
-                    android:textStyle="bold" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recy_PhoBien"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
 
             </LinearLayout>
         </ScrollView>
