--- a/app/src/main/res/layout/item_giohang.xml
+++ b/app/src/main/res/layout/item_giohang.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="344.67dp"
+    android:layout_width="match_parent"
     android:layout_height="160.05dp"
-    android:orientation="horizontal"
-    android:padding="12dp"
-    android:background="@drawable/edit_cardview"
-    android:elevation="10dp"
     android:layout_marginHorizontal="24dp"
     android:layout_marginTop="8dp"
-    >
+    android:background="@drawable/edit_cardview"
+    android:layout_marginVertical="16dp"
+    android:elevation="10dp"
+    android:orientation="horizontal"
+    android:padding="12dp">
 
     <ImageView
         android:id="@+id/im_GioHang"
@@ -67,34 +67,34 @@
 
         <EditText
             android:id="@+id/edSoLuongGH"
-            android:layout_width="64dp"
+            android:layout_width="32dp"
             android:layout_height="33dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:inputType="number"
             android:padding="0dp"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/btnCong"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.111"
             app:layout_constraintStart_toEndOf="@+id/btnTru"
             app:layout_constraintTop_toBottomOf="@+id/tvGiaSachGH" />
 
         <ImageButton
             android:id="@+id/btnTru"
-            android:layout_width="26dp"
-            android:layout_height="23dp"
-            android:layout_marginStart="28dp"
-            android:layout_marginBottom="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="4dp"
             android:src="@drawable/tru"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageButton
             android:id="@+id/btnCong"
-            android:layout_width="23dp"
-            android:layout_height="24dp"
-            android:layout_marginEnd="84dp"
-            android:layout_marginBottom="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="60dp"
+            android:layout_marginBottom="4dp"
             android:src="@drawable/cong"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
