--- a/app/src/main/res/layout/item_sanpham.xml
+++ b/app/src/main/res/layout/item_sanpham.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="185dp"
-    android:layout_height="270dp"
+    android:layout_width="165dp"
+    android:layout_height="250dp"
     android:orientation="vertical"
     android:background="@drawable/bg_itemsanpham"
     android:layout_marginHorizontal="8dp"
@@ -9,23 +9,23 @@
 
     <ImageView
         android:id="@+id/imageSach"
-        android:layout_width="170dp"
-        android:layout_height="190dp"
+        android:layout_width="150dp"
+        android:layout_height="170dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="5dp"
         android:src="@drawable/top3_1" />
 
     <TextView
         android:id="@+id/tvTenSach"
-        android:layout_width="175dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="4dp"
+        android:text="Trải nghiệm khách hàng xuất sắc"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textStyle="bold"
         android:textSize="14dp"
-        android:layout_marginTop="4dp"
-        android:text="Trải nghiệm khách hàng xuất sắc" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvGia"
