--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -7,27 +7,44 @@
     tools:context=".UI.DangNhapActivity">
 
     <ImageView
+        android:id="@+id/imageView3"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="60dp"
-        android:src="@drawable/ic_launcher_background"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="10dp"
+        android:text="ĐĂNG NHẬP"
+        android:textColor="#009966"
+        android:textSize="28dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/edEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
     <EditText
         android:id="@+id/edEmail"
         android:layout_width="match_parent"
         android:layout_height="51dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="340dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/edittext"
+        android:background="@drawable/bogoc_edittext"
         android:hint="Email"
         android:paddingLeft="16dp"
+        android:layout_marginHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,13 +52,12 @@
         android:id="@+id/edMatKhau"
         android:layout_width="match_parent"
         android:layout_height="51dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/edittext"
-        android:hint="Mật Khẩu"
-        android:inputType="textPassword"
+        android:layout_marginHorizontal="16dp"
         android:paddingLeft="16dp"
+        android:background="@drawable/bogoc_edittext"
+        android:inputType="textPassword"
+        android:hint="Mật Khẩu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edEmail" />
@@ -54,6 +70,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="24dp"
         android:clickable="true"
+        android:textSize="16dp"
         android:text="Quên mật khẩu?"
         android:textColor="#5DB075"
         app:layout_constraintEnd_toEndOf="parent"
@@ -117,12 +134,12 @@
         android:id="@+id/btnDangNhap"
         android:layout_width="match_parent"
         android:layout_height="52dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="132dp"
-        android:layout_marginEnd="16dp"
-        android:backgroundTint="#5DB075"
-        android:elevation="10dp"
+        android:textSize="20dp"
         android:text="Đăng nhập"
+        android:backgroundTint="#5DB075"
+        android:layout_marginHorizontal="16dp"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.547"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,9 +150,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:textSize="15dp"
         android:text="Chưa có tài khoản?"
-        android:textColor="#5DB075"
-        android:textStyle="bold"
+        android:textColor="#735D5D"
+        android:textStyle=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnDangNhap" />
@@ -145,8 +163,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:textSize="21dp"
         android:text="Đăng ký"
-        android:textColor="#ABB7AF"
+        android:textColor="#5DB075"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
