--- a/app/src/main/res/layout/activity_chi_tiet_sach.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_sach.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,36 +8,52 @@
     tools:context=".Customer.ChiTietSachActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout3"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:background="#5DB075">
+        android:background="#5DB075"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/tvTrove"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:clickable="true"
-            android:focusedSearchResultHighlightColor="@color/white"
-            android:text="trở về"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="24sp"
+        <ImageView
+            android:id="@+id/imbackchitiet"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/icon_back"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chi tiết sách"
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="wrap_content"
+        android:layout_marginTop="65dp"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp">
+            android:layout_marginRight="15dp"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/image_hinh"
@@ -50,40 +66,40 @@
                 android:id="@+id/tv_TenSach"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:textSize="30dp"
                 android:layout_marginTop="10dp"
-                android:text="Muôn kiếp nhân sinh" />
+                android:text="Muôn kiếp nhân sinh"
+                android:textColor="@color/black"
+                android:textSize="26dp"
+                android:textStyle="bold" />
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textSize="22dp"
-                    android:text="Thể loại:" />
+                    android:text="Thể loại:"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_TheLoai"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="22dp"
                     android:layout_marginLeft="8dp"
-                    android:text="Tiểu thuyết" />
+                    android:text="Tiểu thuyết"
+                    android:textSize="20dp" />
             </TableRow>
 
             <TextView
                 android:id="@+id/tv_Gia"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30dp"
+                android:text="69.300 đ"
                 android:textColor="@color/red"
-                android:text="69.300 đ" />
+                android:textSize="22dp" />
 
             <TableRow
                 android:layout_width="match_parent"
@@ -142,70 +158,63 @@
 
             </TableRow>
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp">
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btn_ThemGioHang"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_button"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:text="Thêm hàng vào giỏ"
-                    android:backgroundTint="#5DB075"
-                    android:textColor="@color/white"
-                    android:textSize="16dp" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btn_MuaNgay"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_button"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:layout_marginLeft="8dp"
-                    android:text="Mua Ngay"
-                    android:backgroundTint="#5DB075"
-                    android:textColor="@color/white"
-                    android:textSize="16dp" />
-
-            </TableRow>
-
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="Mô tả"
                 android:textColor="@color/black"
                 android:textSize="22dp"
-                android:textStyle="bold"
-                android:text="Mô tả" />
+                android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/tvMota"
+
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="16dp"
-                android:text="Mô tả" />
+                android:layout_height="200dp">
+
+                <TextView
+                    android:id="@+id/tvMota"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Mô tả"
+                    android:textColor="@color/black"
+                    android:textSize="16dp" />
+            </ScrollView>
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="Sách tương tự"
                 android:textColor="@color/black"
                 android:textSize="22dp"
-                android:textStyle="bold"
-                android:text="Sách tương tự" />
+                android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rc_tuongTu"
+                android:paddingBottom="132dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
         </LinearLayout>
     </ScrollView>
 
-</LinearLayout>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_Themgiohang"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="4dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:background="@drawable/bg_button"
+        android:textSize="16dp"
+        android:textColor="@color/white"
+        android:text="Thêm vào giỏ hàng"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
