--- a/app/src/main/res/layout/activity_sua_thong_tin.xml
+++ b/app/src/main/res/layout/activity_sua_thong_tin.xml
@@ -12,33 +12,29 @@
         android:layout_height="84dp"
         android:background="#5DB075"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/tvBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/img_TroVe"
+            android:layout_width="30dp"
+            android:layout_height="32dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            android:clickable="true"
-            android:src="@drawable/baseline_arrow_back_ios_24"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
+            android:src="@drawable/icon_back"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="24dp"
             android:text="Chỉnh sửa thông tin"
             android:textColor="@color/white"
-            android:textSize="24sp"
+            android:textSize="28dp"
             android:textStyle="bold"
-            app:flow_horizontalAlign="center"
-            app:flow_verticalAlign="center"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/top"
             app:layout_constraintStart_toStartOf="@id/top"
             app:layout_constraintTop_toTopOf="@id/top" />
@@ -50,7 +46,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="32dp"
-        android:src="@drawable/hinh2"
+        android:src="@drawable/account"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +55,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="6dp"
+        android:textColor="@color/green"
         android:text="Ảnh Đại diện"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -70,9 +67,9 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
-        android:text="Tên :"
-        android:textSize="16sp"
+        android:layout_marginTop="65dp"
+        android:text="Tên:"
+        android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.122"
@@ -81,11 +78,12 @@
 
     <EditText
         android:id="@+id/edTen"
-        android:layout_width="318dp"
-        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:paddingLeft="16dp"
-        android:background="@drawable/edittext"
+        android:layout_marginHorizontal="16dp"
+        android:background="@drawable/bogoc_edittext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,9 +94,9 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Địa chỉ :"
-        android:textSize="16sp"
+        android:layout_marginTop="12dp"
+        android:text="Địa chỉ:"
+        android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.129"
@@ -107,11 +105,12 @@
 
     <EditText
         android:id="@+id/edDiaChi"
-        android:layout_width="318dp"
-        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:paddingLeft="16dp"
-        android:background="@drawable/edittext"
+        android:layout_marginHorizontal="16dp"
+        android:background="@drawable/bogoc_edittext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
@@ -124,19 +123,20 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
         android:layout_marginTop="12dp"
-        android:text="Số điện thoại : "
-        android:textSize="16sp"
+        android:text="Số điện thoại: "
+        android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edDiaChi" />
 
     <EditText
         android:id="@+id/edSDT"
-        android:layout_width="318dp"
-        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:paddingLeft="16dp"
-        android:background="@drawable/edittext"
+        android:layout_marginHorizontal="16dp"
+        android:background="@drawable/bogoc_edittext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
@@ -145,14 +145,16 @@
 
     <Button
         android:id="@+id/btnCapNhat"
-        android:layout_width="283dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="84dp"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_marginBottom="50dp"
         android:backgroundTint="#5DB075"
-        android:text="Cập nhật thông tin"
+        android:text="Cập nhật"
+        android:textSize="24dp"
+        android:layout_marginHorizontal="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edSDT" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
