--- a/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/app/src/main/res/layout/fragment_trang_chu.xml
@@ -16,23 +16,19 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginTop="20dp">
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/logo"
+                    android:layout_marginLeft="16dp"/>
 
                 <ImageView
                     android:id="@+id/img_Search"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_marginLeft="315dp"
+                    android:layout_marginLeft="250dp"
                     android:clickable="true"
                     android:src="@drawable/icon_search" />
-
-                <ImageView
-                    android:id="@+id/img_chat"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/comment" />
-
             </TableRow>
         </TableLayout>
 
